--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,11 +1,11 @@
-{% include "admin/includes/head.html" %}
+{% include "includes/head.html" %}
     <title> The Science's on the Table - Painel de Administrador</title>
 </head>
 
 <!-- corpo do site -- >
 <body>
     <!-- menu superior (fixado) -->
-{% include "admin/includes/menu.html" %}
+{% include "includes/menu.html" %}
     <!-- fim do menu superior (fixado) -->
 
 
