--- a/templates/ver-post.html
+++ b/templates/ver-post.html
@@ -82,10 +82,7 @@
                     <hr>
 
                     {% if g.user %}
-                    <div class="well">
-                        <a class="btn btn-info" style="color:white;" role="button">Editar</a>
-                        <a class="btn btn-danger" style="color:white;" role="button">Excluir</a>
-                    </div>
+                    {% include "includes/mostrar-posts.html" %}
 
                     <hr>
 
