--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -2,51 +2,68 @@
     <title>The Science's on the Table - Login</title>
 </head>
 
-<!-- corpo do site -- >
-<body>
-    <!-- menu superior (fixado) -->
-{% include "admin/includes/menu_login.html" %}
-    <!-- fim do menu superior (fixado) -->
+<!-- corpo do site -->
+<body class="text-center">
+    <form class="form-signin" method="post">
+        <img class="mb-4" src="{{url_for('.static', filename='logo.png')}}" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">Entrar</h1>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="E-mail" name="email" required autofocus>
+        <label for="inputPassword" class="sr-only">Senha</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Senha" name="senha" required>
+        <button class="btn btn-lg btn-success btn-block" type="submit">Entrar</button>
+        <p class="mt-5 mb-3 text-muted">© 2018 Copyright: The Science's on the Table</p>
+    </form>
+</body>
 
+<style type="text/css">
+    html,
+body {
+  height: 100%;
+}
 
+body {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #f5f5f5;
+}
 
-    <!-- inicio div de chamada do site -->
-{% include "admin/includes/chamada.html" %}
-    <!-- fim div de chamada do site -->
-
-
-    <!-- (new) inicio div de corpo do site -->
-    <div class="jumbotron-fluid">
-        <div class="container">
-            <!-- form de post novo -->
-            <div class="form-area">
-                <form role="form" method="post">
-                    <h2 class="h1-responsive font-weight-bold text-center my-5">Login</h2>
-                    {% if msg == 1 %}
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        E-mail ou senha incorretos
-                    </div>
-                    {% endif %}
-                    <!-- campo email -->
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="email" name="email" placeholder="E-mail" required>
-                    </div>
-                    <!-- campo senha -->
-                    <div class="form-group">
-                        <input type="password" class="form-control" id="senha" name="senha" placeholder="Senha" required>
-                    </div>
-                    <!-- botão de login -->
-                    <button type="submit" id="enviar" name="enviar" class="btn btn-success pull-right">Login</button>
-                </form>
-
-            </div>
-        </div>
-    </div>
-    <!-- (new) fim div de corpo do site -->
-
-
-    <!-- rodapé do site -->
-{% include "includes/rodape.html" %}
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+</style>
