Correção de bug no login

--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,4 +1,4 @@
-{% include "admin/includes/head.html" %}
+{% include "includes/head.html" %}
     <title>The Science's on the Table - Login</title>
 </head>
 
