Editar post completo + correção de bug na visualização do post

--- a/templates/ver-post.html
+++ b/templates/ver-post.html
@@ -82,7 +82,7 @@
                     <hr>
 
                     {% if g.user %}
-                    {% include "includes/mostrar-posts.html" %}
+                    {% include "includes/botoes-admin-only.html" %}
 
                     <hr>
 
