--- a/templates/index.html
+++ b/templates/index.html
@@ -30,3 +30,5 @@
     <!-- (new) fim div de corpo do site -->
 
 {% include "includes/rodape.html" %}
+<!-- script de limitar caracteres -->
+<script src="{{url_for('.static', filename='js/limitar-post.js')}}"></script>
