--- a/templates/posts.html
+++ b/templates/posts.html
@@ -75,3 +75,6 @@
     <!-- (new) fim div de corpo do site -->
 
 {% include "includes/rodape.html" %}
+
+<!-- script de limitar caracteres -->
+<script src="{{url_for('.static', filename='js/limitar-post.js')}}"></script>
