--- a/templates/includes/rodape.html
+++ b/templates/includes/rodape.html
@@ -28,7 +28,7 @@
         </div>
         <!-- copyright -->
         <div class="footer-copyright text-center py-3" style="background-color: #133d06;">
-            © 2018 Copyright: The Science's on the Table
+            <span id="copyright">© 2018 Copyright: The Science's on the Table</span>
         </div>
     </footer>
 
@@ -37,6 +37,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!-- js do ano -->
+    <script type="text/javascript" src="{{url_for('.static', filename='js/copyright.js')}}"></script>
 </body>
 
 </html>
