--- a/templates/ver-post.html
+++ b/templates/ver-post.html
@@ -62,9 +62,23 @@
                             </div>  
                         </div>
                     </div>
+
+                    <hr>
+
+                    <div id="fb-root"></div>
+                    <script>(function(d, s, id) {
+                      var js, fjs = d.getElementsByTagName(s)[0];
+                      if (d.getElementById(id)) return;
+                      js = d.createElement(s); js.id = id;
+                      js.src = 'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v3.2&appId=307688550091766&autoLogAppEvents=1';
+                      fjs.parentNode.insertBefore(js, fjs);
+                    }(document, 'script', 'facebook-jssdk'));</script>
+                    
+                    <div class="fb-comments" data-numposts="5"></div>
+
                 </div>
 
-                <div class="col-lg-4">
+                <div class="col-lg-4" style="margin-bottom: 10px;">
                     <div class="well">
                         <form method="get" action="/busca">
                             <h4><i class="fa fa-search"></i> Procurar</h4>
@@ -89,10 +103,25 @@
                     {% endif %}
 
                     <div class="well">
+                        <h4><i class="fas fa-ad"></i> Apoio:</h4>
+                        <a href="#" target="_blank">
+                            <img src="http://placehold.it/500x330" class="img-fluid" alt="" style="margin-bottom: 10px;">
+                        </a>
+
+                        <a href="#" target="_blank">
+                            <img src="http://placehold.it/500x330" class="img-fluid" alt="" style="margin-bottom: 10px;">
+                        </a>
+
+                        <a href="#" target="_blank">
+                            <img src="http://placehold.it/500x330" class="img-fluid" alt="" style="margin-bottom: 10px;">
+                        </a>
+                    </div>
+
+                    <hr>
+                    
+                    <div class="well">
                         [BETA TESTE]<br>
                         Em breve:<br>
-                        - posts populares<br>
-                        - anuncios / recomendações<br>
                         - comentarios (facebook)
                     </div>
                 </div>
