--- a/templates/includes/rodape.html
+++ b/templates/includes/rodape.html
@@ -7,7 +7,7 @@
                         <h6 class="mb-0">Visite nossas redes sociais:</h6>
                     </div>
                     <div class="col-md-6 col-lg-7 text-center text-md-right">
-                        <a class="fb-ic fa-lg" href="#" style="color: white;">
+                        <a class="fb-ic fa-lg" href="https://www.facebook.com/scienceonthetable/" target="_blank" style="color: white;">
                             <i class="fab fa-facebook white-text mr-4"> </i>
                         </a>
                         <a class="tw-ic fa-lg" href="#" style="color: white;">
