--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,5 +1,5 @@
 {% include "includes/head.html" %}
-    <title> The Science's on the Table - Painel de Administrador</title>
+    <title> The Science's on the Table - Dashboard</title>
 </head>
 
 <!-- corpo do site -- >
@@ -19,44 +19,18 @@
     <div class="jumbotron-fluid">
         <div class="container">
             <section class="my-5">
-                <h2 class="h1-responsive font-weight-bold text-center my-5">Últimos Posts</h2>
+                <h2 class="h1-responsive font-weight-bold text-center my-5">Rascunhos de Posts</h2>
 
                 {% if posts == [] %}
                 <div class="alert alert-danger alert-dismissible fade show" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    Nenhum post encontrado
+                    Nenhum post encontrado!
                 </div>
                 {% endif %}
                 <!-- lista de posts -->
-                <!-- post #1 -->
-                {% for post in posts %}
-                {% set foto = "/static/{}".format(post[3]) %}
-                <div class="row">
-                    <!-- div da imagem -->
-                    <div class="col-lg-5 col-xl-4">
-                        <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4">
-                            <img class="img-fluid" src="{{ foto }}" alt="{{ post[1] }}" title="{{ post[1] }}">
-                        </div>
-                    </div>
-                    <!-- fim div da imagem -->
-
-                    <!-- div do texto -->
-                    <div class="col-lg-7 col-xl-8">
-                        <h3 class="font-weight-bold mb-3">{{ post[1] }}</h3>
-                        <p class="dark-grey-text">{{ post[5]|safe }}</p>
-                        <p>Publicado por: <a class="font-weight-bold">{{ post[4] }}</a>, {{ post[2] }}</p>
-                        <a class="btn btn-success" style="color:white;" role="button">Ver Mais</a>
-                        <a class="btn btn-info" style="color:white;" role="button">Editar</a>
-                        <a class="btn btn-danger" style="color:white;" role="button">Excluir</a>
-                    </div>
-                    <!-- fim div do texto -->
-                </div>
-
-                <hr class="my-5">
-                {% endfor %}
-                
+                {% include "includes/mostrar-posts.html" %}
                 <!-- fim da lista de posts-->
             </section>
         </div>
