--- a/templates/includes/menu.html
+++ b/templates/includes/menu.html
@@ -27,6 +27,10 @@
 
                 {% if g.user %}
                 <li class="nav-item">
+                    <a class="nav-link" href="/admin/">Dashboard</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="/admin/novo-post/">Novo Post</a>
                 </li>
 
