--- a/templates/includes/mostrar-posts.html
+++ b/templates/includes/mostrar-posts.html
@@ -12,6 +12,9 @@
                     <!-- div do texto -->
                     <div class="col-lg-7 col-xl-8">
                         <h3 class="font-weight-bold mb-3">{{ post[1] }}</h3>
+                        {% if post[6] == 0 %}
+                            <h4 class="font-weight-bold mb-3">[Post Oculto]</h4>
+                        {% endif %}
                         <p class="dark-grey-text" id="{{ loop.index }}">{{ post[5]|safe }}</p>
                         <p>Publicado por: <a class="font-weight-bold">{{ post[4] }}</a>, {{ post[2] }}</p>
                         <a class="btn btn-success" href="/posts/ver-post/{{ post[7] }}" style="color:white;" role="button">Ver Mais</a>
