--- a/templates/ver-post.html
+++ b/templates/ver-post.html
@@ -103,6 +103,20 @@
                     {% endif %}
 
                     <div class="well">
+                        <h4><i class="fa fa-tags"></i> Posts mais populares </h4>
+                        <ul class="list-unstyled">
+                            {% for post in populares %}
+                            {% set url = "/posts/ver-post/{}".format(post[1]) %}
+                            <li>
+                                <a href="{{ url }}" target="_blank"><span class="badge badge-success">{{ post[0]}}</span></a>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+
+                    <hr>
+
+                    <div class="well">
                         <h4><i class="fas fa-ad"></i> Apoio:</h4>
                         {% for ad in g.ads %}
                         {% set foto = "/static/img/ads/{}".format(ad[2]) %}
