Edição de usuários

--- a/templates/admin/ver-usuarios.html
+++ b/templates/admin/ver-usuarios.html
@@ -62,7 +62,7 @@
                         <br>
                         <br>
                         {% if g.user == autor[10] %}
-                        <a class="btn btn-info" style="color:white;" role="button">Editar Perfil</a>
+                        <a class="btn btn-info" style="color:white;" href="/usuarios/editar/" role="button">Editar Perfil</a>
                         {% endif %}
                     </div>
                     <!-- fim div do texto -->
