Alteração da marca e exibição de usuários

--- a/templates/admin/editar-post.html
+++ b/templates/admin/editar-post.html
@@ -1,5 +1,5 @@
 {% include "includes/head.html" %}
-    <title>The Science's on the Table - Editar Post - {{ post[1] }}</title>
+    <title>{{ g.brand }} - Editar Post - {{ post[1] }}</title>
     <!-- summernote css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote.css" rel="stylesheet">
 </head>
