--- a/templates/admin/editar-usuario.html
+++ b/templates/admin/editar-usuario.html
@@ -1,6 +1,6 @@
 {% include "includes/head.html" %}
 {% set nome = user[1] + ' ' + user[2] %}
-    <title>The Science's on the Table - Editar Usuário - {{ nome }}</title>
+    <title>{{ g.brand }} - Editar Usuário - {{ nome }}</title>
 </head>
 
 <!-- corpo do site -- >
