--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,5 +1,5 @@
 {% include "includes/head.html" %}
-    <title> The Science's on the Table - Dashboard</title>
+    <title> {{ g.brand }} - Dashboard</title>
 </head>
 
 <!-- corpo do site -- >
