--- a/templates/admin/novo-post.html
+++ b/templates/admin/novo-post.html
@@ -1,5 +1,5 @@
 {% include "includes/head.html" %}
-    <title>The Science's on the Table - Novo Post</title>
+    <title>{{ g.brand }} - Novo Post</title>
     <!-- summernote css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote.css" rel="stylesheet">
 </head>
