--- a/templates/busca.html
+++ b/templates/busca.html
@@ -1,6 +1,6 @@
 {% include "includes/head.html" %}
 
-    <title>The Science's on the Table - Busca</title>
+    <title>{{ g.brand }} - Busca</title>
 </head>
 
 <body>
