--- a/templates/contato.html
+++ b/templates/contato.html
@@ -1,6 +1,6 @@
 {% include "includes/head.html" %}
 
-    <title>The Science's on the Table - Contato</title>
+    <title>{{ g.brand }} - Contato</title>
 </head>
 
 <body>
