--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Ciência, Computação, Divulgação, UECE, Universidade, Ceará, Academia">
-    <meta name="description" content="The Science's on the Table: Blog de Divulgação Científica especializado em Ciência da Computação">
+    <meta name="description" content="{{ g.brand }}: Blog de Divulgação Científica especializado em Ciência da Computação">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Marcos Sombra, Bia Vasconcelos">
 
