--- a/templates/includes/rodape.html
+++ b/templates/includes/rodape.html
@@ -28,7 +28,7 @@
         </div>
         <!-- copyright -->
         <div class="footer-copyright text-center py-3" style="background-color: #133d06;">
-            <span id="copyright">© 2018 Copyright: The Science's on the Table</span>
+            <span id="copyright">© 2018 Copyright: {{ g.brand }}</span>
         </div>
     </footer>
 
