--- a/templates/ver-post.html
+++ b/templates/ver-post.html
@@ -1,6 +1,6 @@
 {% include "includes/head.html" %}
 
-    <title>The Science's on the Table - {{ post[1] }}</title>
+    <title>{{ g.brand }} - {{ post[1] }}</title>
 </head>
 
 <body>
