--- a/templates/includes/chamada.html
+++ b/templates/includes/chamada.html
@@ -1,6 +1,6 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">The Science's on the Table</h1>
+            <h1 class="display-4">{{ g.brand }}</h1>
             <p class="lead">O maior blog de Ciência da Computação do meu bairro!</p>
         </div>
     </div>
