--- a/templates/includes/menu.html
+++ b/templates/includes/menu.html
@@ -1,6 +1,6 @@
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #133d06">
         <!-- marca do blog -->
-        <span class="navbar-brand mb-0 h1">The Science's on the Table</span>
+        <span class="navbar-brand mb-0 h1">{{ g.brand }}</span>
         <!-- botão dropdown (para layout responsivo -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
