--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% include "includes/head.html" %}
 
-    <title>The Science's on the Table - Página Inicial</title>
+    <title>{{ g.brand }} - Página Inicial</title>
 </head>
 
 <body>
