--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,6 +1,6 @@
 {% include "includes/head.html" %}
 
-    <title>The Science's on the Table - Posts</title>
+    <title>{{ g.brand }} - Posts</title>
 </head>
 
 <body>
