--- a/templates/admin/editar-usuario.html
+++ b/templates/admin/editar-usuario.html
@@ -1,6 +1,5 @@
 {% include "includes/head.html" %}
-{% set nome = user[1] + ' ' + user[2] %}
-    <title>{{ g.brand }} - Editar Usuário - {{ nome }}</title>
+    <title>{{ g.brand }} - Editar Usuário - {{ user.nome_completo }}</title>
 </head>
 
 <!-- corpo do site -- >
@@ -28,14 +27,14 @@
                             <!-- campo Nome-->
                             <div class="form-group">
                                 <label for="titulo">Nome:</label>
-                                <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome" value="{{ user[1] }}" required>
+                                <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome" value="{{ user.nome }}" required>
                             </div>
                         </div>
                         <div class="col">
                             <!-- campo Sobrenome-->
                             <div class="form-group">
                                 <label for="titulo">Sobrenome:</label>
-                                <input type="text" class="form-control" id="sobrenome" name="sobrenome" placeholder="Sobrenome" value="{{ user[2] }}" required>
+                                <input type="text" class="form-control" id="sobrenome" name="sobrenome" placeholder="Sobrenome" value="{{ user.sobrenome }}" required>
                             </div>
                         </div>
                     </div>
@@ -45,14 +44,14 @@
                             <!-- campo Facebook-->
                             <div class="form-group">
                                 <label for="titulo">Facebook:</label>
-                                <input type="text" class="form-control" id="facebook" name="facebook" placeholder="Facebook" value="{{ user[3] }}" required>
+                                <input type="text" class="form-control" id="facebook" name="facebook" placeholder="Facebook" value="{{ user.facebook }}" required>
                             </div>
                         </div>
                         <div class="col">
                             <!-- campo Instagram-->
                             <div class="form-group">
                                 <label for="titulo">Instagram:</label>
-                                <input type="text" class="form-control" id="instagram" name="instagram" placeholder="Instagram" value="{{ user[4] }}" required>
+                                <input type="text" class="form-control" id="instagram" name="instagram" placeholder="Instagram" value="{{ user.instagram }}" required>
                             </div>
                         </div>
                     </div>
@@ -62,14 +61,14 @@
                             <!-- campo Github-->
                             <div class="form-group">
                                 <label for="titulo">Github:</label>
-                                <input type="text" class="form-control" id="github" name="github" placeholder="Github" value="{{ user[5] }}" required>
+                                <input type="text" class="form-control" id="github" name="github" placeholder="Github" value="{{ user.github }}" required>
                             </div>
                         </div>
                         <div class="col">
                             <!-- campo Linkedin-->
                             <div class="form-group">
                                 <label for="titulo">Linkedin:</label>
-                                <input type="text" class="form-control" id="linkedin" name="linkedin" placeholder="Linkedin" value="{{ user[6] }}" required>
+                                <input type="text" class="form-control" id="linkedin" name="linkedin" placeholder="Linkedin" value="{{ user.linkedin }}" required>
                             </div>
                         </div>
                     </div>
@@ -79,13 +78,13 @@
                     <!-- campo Pesquisa-->
                     <div class="form-group">
                         <label for="titulo">Pesquisa:</label>
-                        <input type="text" class="form-control" id="pesquisa" name="pesquisa" placeholder="Pesquisa" value="{{ user[8] }}" required>
+                        <input type="text" class="form-control" id="pesquisa" name="pesquisa" placeholder="Pesquisa" value="{{ user.pesquisa }}" required>
                     </div>
 
                     <!-- campo Descrição-->
                     <div class="form-group">
                         <label for="titulo">Descrição:</label>
-                        <textarea class="form-control" type="textarea" name="descricao" id="descricao" placeholder="Descrição do Autor" rows="7">{{ user[7] }}</textarea>
+                        <textarea class="form-control" type="textarea" name="descricao" id="descricao" placeholder="Descrição do Autor" rows="7">{{ user.descricao }}</textarea>
                     </div>
                     
                     <!-- botão de envio -->
